--- a/content.html
+++ b/content.html
@@ -615,7 +615,7 @@
             </div>
         </div>
      -->
-    <a href="./index.html#buy"><div class="button" style="padding: 20px; position: static; margin-top: 50px; font-weight: 600;">ПЕРЕЙТИ К ПОКУПКЕ КУРСА</div><br></a>
+    <a href="./index.html#buy"><div class="button" style="padding: 20px; position: static; margin-top: 50px; font-weight: 600; margin-left: calc(50% - 144px);">ПЕРЕЙТИ К ПОКУПКЕ КУРСА</div><br></a>
     </section>
 </body>
 </html>
