--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 			</div>
 		</div>
 	</section>
-	<div class="story-container">
+	<div class="story-container" style="align-items: center; margin: 50px 0 50px;">
+		<h2 style="max-width: 600px;">Несколько примеров, когда ошибки в программах приводили к катастрофам</h2>
 		<div class="story">
 			<div class="story-img">
 				<img src="./images/slide1.jpeg" alt="Photo 1">
