--- a/content.html
+++ b/content.html
@@ -90,12 +90,23 @@
                 margin-left: 0;
                 width: 370px;
             }            
+        }        
+        h2{
+            max-width: fit-content;
+        }
+        body{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
     </style>
 </head>
 <body>
     <section class="headline-block">
         <h1>Ниже представлен список видео сгруппированных по темам с кратким описанием и указанием длительности</h1>
+        <h3 style="text-transform: uppercase; font-weight: 800; font-size: 28px; max-width:1400px;">Всего в курсе 56 видеоуроков
+            Общей продолжительностью 
+            23 часа 20 минут!</h3>
     </section>
     <a href="./index.html" class="icon-link"><div class="icon-back"></div></a>
     <div class="content-element">
